8223856: Replace wildcard address with loopback or local host in tests - part 8
Fixes some intermittent test failures by replacing wildcard with loopback - or retrying once.

Reviewed-by: aefimov, chegar